--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,67 @@
 /* You can add global styles to this file, and also import other style files */
+@import "tailwindcss";
+
+@theme {
+  --color-primary: #253a81;
+  --color-primary-hover: #163171;
+}
+
+.spinner {
+  width: 16px;
+  height: 16px;
+  border: 2px solid;
+  border-top: 2px solid transparent;
+  border-radius: 50%;
+  animation: spin 0.5s linear infinite;
+  -webkit-animation: spin 1s linear infinite; /* Safari and Chrome */
+  -moz-animation: spin 1s linear infinite; /* Firefox */
+  -ms-animation: spin 1s linear infinite; /* Microsoft Edge */
+}
+
+.table-spinner {
+  width: 50px;
+  height: 50px;
+  border: 4px solid;
+  border-top: 4px solid transparent;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+  -webkit-animation: spin 1s linear infinite; /* Safari and Chrome */
+  -moz-animation: spin 1s linear infinite; /* Firefox */
+  -ms-animation: spin 1s linear infinite; /* Microsoft Edge */
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@-moz-keyframes spin {
+  0% {
+    -moz-transform: rotate(0deg);
+  }
+  100% {
+    -moz-transform: rotate(360deg);
+  }
+}
+
+@-ms-keyframes spin {
+  0% {
+    -ms-transform: rotate(0deg);
+  }
+  100% {
+    -ms-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
