--- a/src/app/core/layouts/auth-layout/auth-layout.html
+++ b/src/app/core/layouts/auth-layout/auth-layout.html
@@ -1,8 +1,8 @@
 <div class="auth-layout min-h-screen flex flex-col items-center justify-center bg-[#ffffff] p-8 px-4">
   <!-- Logo -->
-  <!-- <div class="flex flex-col items-center mb-3 mt-8">
-    <img src="../../../../../assets/svg/logo.svg" alt="SecurePay Logo" class="h-10 mb-2" />
-  </div> -->
+  <div class="flex flex-col items-center mb-3 mt-8">
+    <img [src]="'logo.png'" alt="logo" class="h-10 mb-2" />
+  </div>
   <div class="w-full max-w-md bg-white rounded-xl shadow-lg mx-4 p-8">
 
     <router-outlet></router-outlet>
