--- a/src/app/core/layouts/header/header.html
+++ b/src/app/core/layouts/header/header.html
@@ -1,6 +1,6 @@
-<section class="flex items-center p-2 bg-white">
-  <!-- <img class="max-h-[70px] mr-[220px]" src="../../../../../assets/logo.png" alt=""> -->
-  <h3 class="mr-10 text-nowrap">
-    Welcome to your dashboard
-  </h3>
-</section>
+<header class="flex items-center p-2 bg-white border-b border-gray-200">
+  <h1 class="text-xl font-semibold text-primary text-nowrap">
+    {{currentPageTitle}}
+    <!-- Welcome to your dashboard -->
+  </h1>
+</header>
