--- a/src/app/pages/auth/login/login.html
+++ b/src/app/pages/auth/login/login.html
@@ -22,7 +22,7 @@
     <div class="relative">
       <input formControlName="password" id="password" [type]="hide ? 'password' : 'text'" placeholder="Input password"
         autocomplete="new-password"
-        class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 pr-10" />
+        class="w-full px-3 py-2 border border-[#D5D7DA] rounded-[0.5rem] text-sm shadow-sm placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent transition" />
       <!-- Eye Icon -->
       <span (click)="hide=!hide" tabindex="0" (keydown.enter)="hide=!hide" (keydown.space)="hide=!hide"
         class="absolute inset-y-0 right-3 flex items-center text-gray-400 cursor-pointer">
