--- a/src/app/pages/user/user-create/user-create.html
+++ b/src/app/pages/user/user-create/user-create.html
@@ -34,6 +34,7 @@
           </app-input>
         </div>
 
+        @if (mode === 'create') {
         <!-- Password -->
         <div class="mb-4">
           <label class="block text-sm text-[#4D4D4D] font-medium mb-1" for="password">Password</label>
@@ -78,6 +79,7 @@
           </div>
           }
         </div>
+        }
 
         <!-- User Type -->
         <div class="mb-4">
@@ -88,14 +90,119 @@
 
       </div>
 
+      <!-- Submit -->
       <div class="mt-8">
         <app-button [buttonDisabled]="isLoading()" [loading]="isLoading()" (buttonClick)="onSubmit()">
           Continue
         </app-button>
       </div>
 
-      <!-- Submit -->
     </form>
+
+    @if (mode === 'edit') {
+    <form [formGroup]="passwordForm">
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mt-8">
+        <!-- New Password -->
+        <div class="mb-4">
+          <label class="block text-sm text-[#4D4D4D] font-medium mb-1" for="new_password">New Password</label>
+          <div class="relative">
+            <input formControlName="password" id="new_password" [type]="hide ? 'password' : 'text'"
+              placeholder="Input new password" autocomplete="new-password"
+              class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 pr-10" />
+            <!-- Eye Icon -->
+            <span (click)="hide=!hide" tabindex="0" (keydown.enter)="hide=!hide" (keydown.space)="hide=!hide"
+              class="absolute inset-y-0 right-3 flex items-center text-gray-400 cursor-pointer">
+              @if (hide) {
+              <svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M10.3866 8.50776C10.3866 9.82776 9.31995 10.8944 7.99995 10.8944C6.67995 10.8944 5.61328 9.82776 5.61328 8.50776C5.61328 7.18776 6.67995 6.12109 7.99995 6.12109C9.31995 6.12109 10.3866 7.18776 10.3866 8.50776Z"
+                  stroke="#7D7D7D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                <path
+                  d="M7.9999 14.0216C10.3532 14.0216 12.5466 12.6349 14.0732 10.2349C14.6732 9.29495 14.6732 7.71495 14.0732 6.77495C12.5466 4.37495 10.3532 2.98828 7.9999 2.98828C5.64656 2.98828 3.45323 4.37495 1.92656 6.77495C1.32656 7.71495 1.32656 9.29495 1.92656 10.2349C3.45323 12.6349 5.64656 14.0216 7.9999 14.0216Z"
+                  stroke="#7D7D7D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+              </svg>
+              } @else {
+              <svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <!-- Slash Line -->
+                <path d="M2 2L14 14" stroke="#7D7D7D" stroke-width="1.5" stroke-linecap="round" />
+
+                <!-- Eye Inner Circle (pupil/iris) -->
+                <path
+                  d="M10.3866 8.50776C10.3866 9.82776 9.31995 10.8944 7.99995 10.8944C6.67995 10.8944 5.61328 9.82776 5.61328 8.50776C5.61328 7.18776 6.67995 6.12109 7.99995 6.12109C9.31995 6.12109 10.3866 7.18776 10.3866 8.50776Z"
+                  stroke="#7D7D7D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+
+                <!-- Eye Outline -->
+                <path
+                  d="M7.9999 14.0216C10.3532 14.0216 12.5466 12.6349 14.0732 10.2349C14.6732 9.29495 14.6732 7.71495 14.0732 6.77495C12.5466 4.37495 10.3532 2.98828 7.9999 2.98828C5.64656 2.98828 3.45323 4.37495 1.92656 6.77495C1.32656 7.71495 1.32656 9.29495 1.92656 10.2349C3.45323 12.6349 5.64656 14.0216 7.9999 14.0216Z"
+                  stroke="#7D7D7D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+              </svg>
+              }
+            </span>
+          </div>
+
+          @if (new_password.invalid && (new_password.touched || new_password.dirty)) {
+          <div class="text-red-500 text-xs mt-1">
+            Password is a required field.
+          </div>
+          }
+        </div>
+
+        <!-- Confirm Password -->
+        <div class="mb-4">
+          <label class="block text-sm text-[#4D4D4D] font-medium mb-1" for="confirm_password">Confirm Password</label>
+          <div class="relative">
+            <input formControlName="confirm_password" id="confirm_password" [type]="hide ? 'password' : 'text'"
+              placeholder="Confirm password" autocomplete="new-password"
+              class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 pr-10" />
+            <!-- Eye Icon -->
+            <span (click)="hide=!hide" tabindex="0" (keydown.enter)="hide=!hide" (keydown.space)="hide=!hide"
+              class="absolute inset-y-0 right-3 flex items-center text-gray-400 cursor-pointer">
+              @if (hide) {
+              <svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M10.3866 8.50776C10.3866 9.82776 9.31995 10.8944 7.99995 10.8944C6.67995 10.8944 5.61328 9.82776 5.61328 8.50776C5.61328 7.18776 6.67995 6.12109 7.99995 6.12109C9.31995 6.12109 10.3866 7.18776 10.3866 8.50776Z"
+                  stroke="#7D7D7D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                <path
+                  d="M7.9999 14.0216C10.3532 14.0216 12.5466 12.6349 14.0732 10.2349C14.6732 9.29495 14.6732 7.71495 14.0732 6.77495C12.5466 4.37495 10.3532 2.98828 7.9999 2.98828C5.64656 2.98828 3.45323 4.37495 1.92656 6.77495C1.32656 7.71495 1.32656 9.29495 1.92656 10.2349C3.45323 12.6349 5.64656 14.0216 7.9999 14.0216Z"
+                  stroke="#7D7D7D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+              </svg>
+              } @else {
+              <svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <!-- Slash Line -->
+                <path d="M2 2L14 14" stroke="#7D7D7D" stroke-width="1.5" stroke-linecap="round" />
+
+                <!-- Eye Inner Circle (pupil/iris) -->
+                <path
+                  d="M10.3866 8.50776C10.3866 9.82776 9.31995 10.8944 7.99995 10.8944C6.67995 10.8944 5.61328 9.82776 5.61328 8.50776C5.61328 7.18776 6.67995 6.12109 7.99995 6.12109C9.31995 6.12109 10.3866 7.18776 10.3866 8.50776Z"
+                  stroke="#7D7D7D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+
+                <!-- Eye Outline -->
+                <path
+                  d="M7.9999 14.0216C10.3532 14.0216 12.5466 12.6349 14.0732 10.2349C14.6732 9.29495 14.6732 7.71495 14.0732 6.77495C12.5466 4.37495 10.3532 2.98828 7.9999 2.98828C5.64656 2.98828 3.45323 4.37495 1.92656 6.77495C1.32656 7.71495 1.32656 9.29495 1.92656 10.2349C3.45323 12.6349 5.64656 14.0216 7.9999 14.0216Z"
+                  stroke="#7D7D7D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+              </svg>
+              }
+            </span>
+          </div>
+
+          @if (confirm_password.invalid && (confirm_password.touched || confirm_password.dirty)) {
+          <div class="text-red-500 text-xs mt-1">
+            Password is a required field.
+          </div>
+          }
+        </div>
+
+      </div>
+
+      <!-- Submit -->
+      <div class="mt-8">
+        <app-button [buttonDisabled]="isLoading()" [loading]="isLoading()" (buttonClick)="onSetNewPassword()">
+          Set New Password
+        </app-button>
+      </div>
+
+    </form>
+    }
 
   </div>
 </div>
