--- a/src/app/shared/components/empty-state/empty-state.html
+++ b/src/app/shared/components/empty-state/empty-state.html
@@ -1,1 +1,3 @@
-<p>empty-state works!</p>
+<div class="flex justify-center py-4">
+  <img [ngSrc]="'empty-state.svg'" [width]="size" [height]="size" />
+</div>
