--- a/src/app/shared/components/input/input.html
+++ b/src/app/shared/components/input/input.html
@@ -1,15 +1,17 @@
-@if (label ) {
-<label for="{{id}}" class="block text-sm text-[#4D4D4D] font-medium mb-1" for="email">
-  {{label}}
-</label>
-}
+<div class="w-full">
+  @if (label) {
+  <label [for]="id" class="block text-sm font-medium text-[#4D4D4D] mb-1">
+    {{ label }}
+  </label>
+  }
 
-<input [autofocus]="autofocus" [autocomplete]="autocomplete" id="{{id}}" [formControl]="control" [ngClass]="inputClass"
-  [type]="type" [placeholder]="placeholder"
-  class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" />
+  <input [autofocus]="autofocus" [autocomplete]="autocomplete" [id]="id" [formControl]="control" [ngClass]="inputClass"
+    [type]="type" [placeholder]="placeholder || ('Enter ' + label?.toLowerCase())"
+    class="w-full px-3 py-2 border border-[#D5D7DA] rounded-[0.5rem] text-sm shadow-sm placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent transition" />
 
-@if (useDefaultError && ((control.touched || control.dirty) && control.invalid)) {
-<p class="text-red-500 text-xs mt-1">
-  {{errorMessage}}
-</p>
-}
+  @if (useDefaultError && ((control.touched || control.dirty) && control.invalid)) {
+  <p class="text-red-500 text-xs mt-1">
+    {{ errorMessage }}
+  </p>
+  }
+</div>
