--- a/src/app/shared/components/select/select.html
+++ b/src/app/shared/components/select/select.html
@@ -5,7 +5,7 @@
 }
 
 <select [formControl]="control" [ngClass]="inputClass"
-  class="w-full px-4 py-2 border border-[#D5D7DA] rounded-[0.5rem] focus:ring-2 focus:ring-primary focus:border-primary focus:outline-none text-[#717680]">
+  class="w-full px-3 py-2 border border-[#D5D7DA] rounded-[0.5rem] text-sm shadow-sm placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent transition">
   <option [value]="defaultValue" disabled selected hidden>{{ placeholder }}</option>
   @for (option of options; track $index) {
   @if (getObject) {
