--- a/src/app/shared/components/select/select.html
+++ b/src/app/shared/components/select/select.html
@@ -15,3 +15,8 @@
   }
   }
 </select>
+@if ((control.touched || control.dirty) && control.invalid) {
+<p class="text-sm text-red-500">
+  {{errorMessage}}
+</p>
+}
