--- a/src/app/pages/category/category-list/category-list.html
+++ b/src/app/pages/category/category-list/category-list.html
@@ -4,7 +4,16 @@
       <h2 class="text-xl font-semibold text-gray-800">Category List</h2>
       <p class="text-gray-600 mb-6">View, filter, and manage all available data logs in the system.</p>
     </div>
-    <app-button [routerLink]="['/main/category-create']" routerLinkActive="router-link-active"> + New Category
+    <app-button [routerLink]="['/main/category-create']" routerLinkActive="router-link-active"> <svg
+        xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2"
+        stroke-linecap="round" stroke-linejoin="round">
+        <line x1="12" y1="5" x2="12" y2="19" />
+        <line x1="5" y1="12" x2="19" y2="12" />
+      </svg>
+
+      <span>
+        New Category
+      </span>
     </app-button>
   </div>
 
