--- a/src/app/pages/user/user-create/user-create.html
+++ b/src/app/pages/user/user-create/user-create.html
@@ -3,7 +3,9 @@
     <div class="flex items-center justify-between">
       <h2 class="text-[32px] font-semibold text-[#333333] mb-1">{{mode === 'create'? 'New' : 'Edit'}} User </h2>
 
+      @if (mode === 'edit') {
       <app-button (buttonClick)="onToggleUser()">{{ is_active.value? 'Deactivate' : 'Activate'}} User</app-button>
+      }
     </div>
     <p class="text-sm text-[#666666] mb-6">some nice category text</p>
     @if (errorMessage) {
