--- a/src/app/shared/components/input/input.html
+++ b/src/app/shared/components/input/input.html
@@ -5,8 +5,8 @@
   </label>
   }
 
-  <input [autofocus]="autofocus" [autocomplete]="autocomplete" [id]="id" [formControl]="control" [ngClass]="inputClass"
-    [type]="type" [placeholder]="placeholder || ('Enter ' + label.toLowerCase())"
+  <input [readOnly]="readonly" [autofocus]="autofocus" [autocomplete]="autocomplete" [id]="id" [formControl]="control"
+    [ngClass]="inputClass" [type]="type" [placeholder]="placeholder || ('Enter ' + label.toLowerCase())"
     class="w-full px-3 py-2 border border-[#D5D7DA] rounded-[0.5rem] text-sm shadow-sm placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent transition" />
 
   @if (useDefaultError && ((control.touched || control.dirty) && control.invalid)) {
