[MODs]: after first review

--- a/src/app/core/layouts/header/header.html
+++ b/src/app/core/layouts/header/header.html
@@ -5,7 +5,7 @@
   </h1>
 
   <button [matMenuTriggerFor]="menu"
-    class="group rounded-full px-2 py-1 bg-gray-300 flex items-center gap-2 overflow-hidden transition-all duration-300">
+    class="cursor-pointer group rounded-full px-2 py-1 bg-gray-300 flex items-center gap-2 overflow-hidden transition-all duration-300">
     <!-- Avatar Icon (slides left) -->
     <span class="rounded-full bg-white p-1 transform transition-transform duration-300 group-hover:-translate-x-1">
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24"
