--- a/src/app/shared/components/input/input.html
+++ b/src/app/shared/components/input/input.html
@@ -7,7 +7,7 @@
 
   <input [readOnly]="readonly" [autofocus]="autofocus" [autocomplete]="autocomplete" [id]="id" [formControl]="control"
     [ngClass]="inputClass" [type]="type" [placeholder]="placeholder || ('Enter ' + label.toLowerCase())"
-    class="w-full px-3 py-2 border border-[#D5D7DA] rounded-[0.5rem] text-sm shadow-sm placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent transition" />
+    class="w-full px-3 py-2 border border-[#D5D7DA] rounded-[0.5rem] text-sm shadow-sm placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent transition cursor-pointer" />
 
   @if (useDefaultError && ((control.touched || control.dirty) && control.invalid)) {
   <p class="text-red-500 text-xs mt-1">
