--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,8 +2,9 @@
 @import "tailwindcss";
 
 @theme {
-  --color-primary: #0a0c74;
+  --color-primary: #000263;
   --color-primary-hover: #163171;
+  --color-secondary: #ffbf00;
 }
 
 .spinner {
