--- a/src/app/core/layouts/auth-layout/auth-layout.html
+++ b/src/app/core/layouts/auth-layout/auth-layout.html
@@ -1,9 +1,9 @@
-<div class="auth-layout min-h-screen flex flex-col items-center justify-center bg-[#ffffff] p-8 px-4">
+<div class="auth-layout min-h-screen flex flex-col items-center justify-center bg-primary p-8 px-4">
   <!-- Logo -->
-  <div class="flex flex-col items-center mb-3 mt-8">
-    <img [src]="'logo.png'" alt="logo" class="h-10 mb-2" />
-  </div>
-  <div class="w-full max-w-md bg-white rounded-xl shadow-lg mx-4 p-8">
+  <div class="w-full max-w-md bg-white rounded-xl shadow-lg mx-4 p-4 px-8">
+    <div class="flex flex-col items-center mb-8 mt-3">
+      <img [src]="'logo.png'" alt="logo" class="h-10 mb-2" />
+    </div>
 
     <router-outlet></router-outlet>
 
