[MODs]: after first review

--- a/src/app/pages/auth/login/login.html
+++ b/src/app/pages/auth/login/login.html
@@ -1,5 +1,5 @@
 <!-- Login Form -->
-<h2 class="text-[32px] font-semibold text-[#333333] mb-1">Log In</h2>
+<h2 class="text-[32px] font-semibold text-[#333333] mb-1 text-center">Welcome back</h2>
 <p class="text-sm text-[#666666] mb-6">Welcome back, Please enter your login details</p>
 @if (errorMessage) {
 <p class="text-[#F66E6E] text-center text-[1rem]/[1.5rem]">
