--- a/src/app/core/layouts/header/header.html
+++ b/src/app/core/layouts/header/header.html
@@ -31,12 +31,10 @@
 
 
 <mat-menu #menu="matMenu">
-  <button *appHasPermission="'users.can_update_users'" mat-menu-item [routerLink]="['/main/user-profile']"
-    routerLinkActive="router-link-active">
+  <button mat-menu-item [routerLink]="['/main/user-profile']" routerLinkActive="router-link-active">
     View Profile
   </button>
-  <button *appHasPermission="'users.can_reset_password'" mat-menu-item [routerLink]="['/main/change-password']"
-    routerLinkActive="router-link-active">
+  <button mat-menu-item [routerLink]="['/main/change-password']" routerLinkActive="router-link-active">
     Change Password
   </button>
 </mat-menu>
