--- a/src/app/pages/category/category-create/category-create.html
+++ b/src/app/pages/category/category-create/category-create.html
@@ -3,7 +3,10 @@
     <div class="flex items-center justify-between">
       <h2 class="text-[32px] font-semibold text-[#333333] mb-1">{{mode === 'new'? 'New' : 'Edit'}} Category </h2>
       @if (mode === 'edit') {
-      <app-button (buttonClick)="onToggleCategory()">{{ is_active.value? 'Deactivate' : 'Activate'}}
+      <app-button
+        [inputClass]="is_active.value? 'bg-red-500 text-white w-full py-2 px-4 text-white' : 'w-full bg-green-500 hover:bg-primary-hover py-2 px-4 text-white'"
+        (buttonClick)="onToggleCategory()">{{ is_active.value?
+        'Deactivate' : 'Activate'}}
         Category</app-button>
       }
     </div>
