--- a/src/app/pages/user/user-list/user-list.html
+++ b/src/app/pages/user/user-list/user-list.html
@@ -4,7 +4,8 @@
       <h2 class="text-xl font-semibold text-gray-800">Manage Users</h2>
       <p class="text-gray-600 mb-6">View, filter, and manage all available data logs in the system.</p>
     </div>
-    <app-button [routerLink]="['/main/user-create']" routerLinkActive="router-link-active">
+    <app-button *appHasPermission="'users.can_create_users'" [routerLink]="['/main/user-create']"
+      routerLinkActive="router-link-active">
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2"
         stroke-linecap="round" stroke-linejoin="round">
         <line x1="12" y1="5" x2="12" y2="19" />
@@ -51,9 +52,9 @@
     <button [routerLink]="['/main/user-edit', selectedUser?.id]" routerLinkActive="router-link-active" mat-menu-item>
       Edit
     </button>
-    <button (click)="onToggleUser()" mat-menu-item>
+    <!-- <button (click)="onToggleUser()" mat-menu-item>
       Activate/Deactivate User
-    </button>
+    </button> -->
     <!-- <ul>
       <li>
       </li>
