--- a/src/app/shared/components/table-filters/table-filters.html
+++ b/src/app/shared/components/table-filters/table-filters.html
@@ -13,7 +13,7 @@
 
     <input readonly (click)="startPicker.open()" [matDatepicker]="startPicker" [(ngModel)]="from_date"
       placeholder="Select start date"
-      class="w-full px-3 py-2 border border-[#D5D7DA] rounded-[0.5rem] text-sm shadow-sm placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent transition" />
+      class="cursor-pointer w-full px-3 py-2 border border-[#D5D7DA] rounded-[0.5rem] text-sm shadow-sm placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent transition" />
     <mat-datepicker-toggle [for]="startPicker" class="hidden"></mat-datepicker-toggle>
     <mat-datepicker #startPicker></mat-datepicker>
   </div>
@@ -23,7 +23,7 @@
 
     <input readonly (click)="endPicker.open()" [matDatepicker]="endPicker" [(ngModel)]="to_date"
       placeholder="Select end date"
-      class="w-full px-3 py-2 border border-[#D5D7DA] rounded-[0.5rem] text-sm shadow-sm placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent transition" />
+      class="cursor-pointer w-full px-3 py-2 border border-[#D5D7DA] rounded-[0.5rem] text-sm shadow-sm placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent transition" />
     <mat-datepicker-toggle [for]="endPicker" class="hidden"></mat-datepicker-toggle>
     <mat-datepicker #endPicker></mat-datepicker>
   </div>
