--- a/src/app/pages/profile/profile/profile.html
+++ b/src/app/pages/profile/profile/profile.html
@@ -3,7 +3,7 @@
     <div class="flex items-center justify-between">
       <h2 class="text-[32px] font-semibold text-[#333333] mb-1">My Profile </h2>
     </div>
-    <p class="text-sm text-[#666666] mb-6">some nice category text</p>
+    <!-- <p class="text-sm text-[#666666] mb-6">some nice category text</p> -->
     @if (errorMessage) {
     <p class="text-[#F66E6E] text-center text-[1rem]/[1.5rem]">
       {{errorMessage}}
