--- a/src/app/pages/category/category-create/category-create.html
+++ b/src/app/pages/category/category-create/category-create.html
@@ -10,7 +10,7 @@
         Category</app-button>
       }
     </div>
-    <p class="text-sm text-[#666666] mb-6">some nice category text</p>
+    <!-- <p class="text-sm text-[#666666] mb-6">some nice category text</p> -->
     @if (errorMessage) {
     <p class="text-[#F66E6E] text-center text-[1rem]/[1.5rem]">
       {{errorMessage}}
