--- a/src/app/pages/category/category-create/category-create.html
+++ b/src/app/pages/category/category-create/category-create.html
@@ -3,20 +3,21 @@
     <div class="flex items-center justify-between">
       <h2 class="text-[32px] font-semibold text-[#333333] mb-1">{{mode === 'new'? 'New' : 'Edit'}} Category </h2>
       @if (mode === 'edit') {
-      <app-button
+      <app-button [buttonDisabled]="isLoading() || isLoadingCategoryInfo()"
+        [loading]="isLoading() || isLoadingCategoryInfo()"
         [inputClass]="is_active.value? 'bg-red-500 text-white w-full py-2 px-4 text-white' : 'w-full bg-green-500 hover:bg-primary-hover py-2 px-4 text-white'"
         (buttonClick)="onToggleCategory()">{{ is_active.value?
         'Deactivate' : 'Activate'}}
         Category</app-button>
       }
     </div>
-    <!-- <p class="text-sm text-[#666666] mb-6">some nice category text</p> -->
     @if (errorMessage) {
     <p class="text-[#F66E6E] text-center text-[1rem]/[1.5rem]">
       {{errorMessage}}
     </p>
     }
 
+    @if (isLoadingCategoryInfo() === false ) {
     <form [formGroup]="form">
       <!-- Name -->
       <div class="mb-4">
@@ -51,7 +52,7 @@
           </app-input>
           <!-- The repeated column template -->
           <!-- <label for="column-{{ i }}">Column:</label>
-      <input id="column-{{ i }}" type="text" [formControlName]="i" /> -->
+        <input id="column-{{ i }}" type="text" [formControlName]="i" /> -->
         </div>
         }
       </div>
@@ -62,6 +63,17 @@
         Continue
       </app-button>
     </form>
+    } @else {
+    <div class="h-[50vh] flex justify-center items-center">
+      <div>
+        <div class="flex items-center justify-center">
+          <span class="table-spinner"></span>
+        </div>
+        <p class="text-center mt-8">Please wait...</p>
+      </div>
+    </div>
+    }
+
 
   </div>
 </div>
